--- a/_assets/styles/style.css
+++ b/_assets/styles/style.css
@@ -177,6 +177,11 @@ input[type="submit"] {
     background-color: #957743;
 }
 
+#history{
+    cursor: help;
+}
+
+
 /* Section pour les boutons d'upload */
 #import {
     width: 50%;
