--- a/_assets/styles/style.css
+++ b/_assets/styles/style.css
@@ -758,3 +758,50 @@ tr:hover {
         transform: translateY(0);
     }
 }
+
+/*mes simulation view*/
+
+ .switcher-container {
+     width: 80%;
+     margin: auto;
+     padding: 20px;
+     border: 1px solid #ccc;
+     border-radius: 8px;
+     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+     background-color: #f9f9f9;
+ }
+
+.tabs {
+    display: flex;
+    justify-content: space-around;
+    margin-bottom: 20px;
+}
+
+.tab-button {
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    background-color: #e0e0e0;
+    font-size: 16px;
+    transition: background-color 0.3s ease;
+}
+
+.tab-button.active {
+    background-color: #957743;
+    color: white;
+}
+
+.tabs-content {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.tab-content {
+    display: none;
+}
+
+.tab-content.active {
+    display: block;
+}
