--- a/_assets/styles/comparaison.css
+++ b/_assets/styles/comparaison.css
@@ -238,3 +238,46 @@ form h4 {
     box-shadow: 0 0 8px rgba(0, 123, 255, 0.8);
 }
 
+/* Styles pour la modale */
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.5); /* Fond semi-transparent */
+}
+
+.modal-content {
+    position: relative;
+    margin: auto;
+    top: 10%;
+    width: 93%; /* Largeur ajustée */
+    background-color: white;
+    border-radius: 8px;
+    padding: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.close {
+    position: absolute;
+    top: 10px;
+    right: 20px;
+    font-size: 24px;
+    font-weight: bold;
+    color: #333;
+    cursor: pointer;
+}
+
+.close:hover {
+    color: #f00;
+}
+
+/* Masquer les cartes en arrière-plan lorsque la modale est affichée */
+.map-container.hidden {
+    visibility: hidden;
+    pointer-events: none; /* Empêche l'interaction */
+}
